# llming-com

./: README.md  pyproject.toml
llming_com/: __init__.py  auth.py  base_commands.py  client_static.py  command.py  command_router.py  controller.py  data_store.py  debug.py  mcp_http_server.py  mcp_stdio_server.py  mock_auth.py  session.py  session_manager.py  transport.py  ws_router.py
llming_com/server/: __init__.py  client_static.py  middleware.py
llming_com/static/: llming-ws.js
samples/: auth_demo.py  basic_session.py  demo_app.py  websocket_server.py
tests/: conftest.py  test_auth.py  test_client_static.py  test_command.py  test_controller.py  test_data_store.py  test_debug_api.py  test_mcp_http_server.py  test_mock_auth.py  test_session.py  test_session_manager.py  test_transport.py
