[tool.poetry]
name = "llming-com"
version = "0.1.0"
description = "Reusable WebSocket session management, auth, and debug API for llming applications"
authors = ["Michael Ikemann"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Alyxion/llming-com"
homepage = "https://github.com/Alyxion/llming-com"
keywords = ["websocket", "session", "auth", "hmac", "fastapi", "starlette"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.12",
]
packages = [{include = "llming_com"}]

[tool.poetry.urls]
"Author" = "https://github.com/Alyxion"

[tool.poetry.dependencies]
python = ">=3.12"
starlette = ">=0.27"
fastapi = ">=0.100"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.23"
httpx = ">=0.27"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
